Update log_return documentation

--- a/Interest_Rate.ipynb
+++ b/Interest_Rate.ipynb
@@ -44,11 +44,12 @@
    "outputs": [],
    "source": [
     "def log_return(df: pd.DataFrame, column : str = 'Adj Close') -> None:\n",
-    "    \"\"\"Compute the logarithm return\n",
+    "    \"\"\"Compute the logarithm return.\n",
     "\n",
     "    Args:\n",
-    "        df (pd.DataFrame): _description_\n",
-    "        column (str, optional): _description_. Defaults to 'Adj Close'.\n",
+    "        df (pd.DataFrame): data,\n",
+    "        column (str, optional): adjusted value for which compute the \n",
+    "                                logarithm return. Defaults to 'Adj Close'.\n",
     "    \"\"\"\n",
     "    # Compute the logarithm return\n",
     "    y_log = np.log(df[column])\n",
