Moved the .ipynb file into src folder

--- a/src/Interest_Rate.ipynb
+++ b/src/Interest_Rate.ipynb
@@ -20,7 +20,7 @@
     "from datetime import date\n",
     "import datetime \n",
     "import sys\n",
-    "sys.path.append('./lib/')\n",
+    "sys.path.append('../lib/')\n",
     "from functions import *"
    ]
   },
