Added gold date format modification

--- a/src/Interest_Rate.ipynb
+++ b/src/Interest_Rate.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,6 +32,19 @@
     "import pandas_market_calendars as mcal\n",
     "sys.path.append('../lib/')\n",
     "from functions import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path = '../Data/'\n",
+    "file_name = 'daily-treasury-rates.csv'\n",
+    "\n",
+    "# Save the daily treasury rates in the right format\n",
+    "save_gold_data(file_path+file_name)"
    ]
   },
   {
