Removed read gold,  data moved in tassi.ipynb

--- a/src/Interest_Rate.ipynb
+++ b/src/Interest_Rate.ipynb
@@ -36,19 +36,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_path = '../Data/'\n",
-    "file_name = 'daily-treasury-rates.csv'\n",
-    "\n",
-    "# Save the daily treasury rates in the right format\n",
-    "save_gold_data(file_path+file_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
    "outputs": [],
@@ -322,15 +309,7 @@
     "# Interarctive plot\n",
     "import plotly.offline as pyo\n",
     "\n",
-    "pyo.init_notebook_mode(connected=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "pyo.init_notebook_mode(connected=True)\n",
     "pd.options.plotting.backend = 'plotly'"
    ]
   },
