--- a/src/Interest_Rate.ipynb
+++ b/src/Interest_Rate.ipynb
@@ -837,10 +837,7 @@
     }
    ],
    "source": [
-    "breaks_rpt = []\n",
-    "for i in breaks:\n",
-    "    breaks_rpt.append(Y_plr_sq.index[i-1])\n",
-    "\n",
+    "breaks_rpt = [Y_plr_sq.index[i-1] for i in breaks]\n",
     "breaks_rpt"
    ]
   },
